--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "qr-code",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-dev-client": "~2.0.1",
-    "expo-splash-screen": "~0.17.5"
+    "expo": "^48.0.0",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-dev-client": "~2.2.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
